--- a/docs/TeX_files/settings.tex
+++ b/docs/TeX_files/settings.tex
@@ -3,6 +3,8 @@
 \titleformat{\chapter}[display]
 {\normalfont\bfseries}{}{0pt}{\huge}
 
+\setcounter{tocdepth}{3} % Set the depth of the table of contents
+
 \geometry{margin=1in}
 
 \setlength{\parindent}{25pt}
