--- a/docs/TeX_files/settings.tex
+++ b/docs/TeX_files/settings.tex
@@ -4,6 +4,7 @@
 {\normalfont\bfseries}{}{0pt}{\huge}
 
 \setcounter{tocdepth}{3} % Set the depth of the table of contents
+\setcounter{secnumdepth}{3} % Set the depth for numbering subsections and subsubsections
 
 \geometry{margin=1in}
 
