--- a/docs/TeX_files/packages.tex
+++ b/docs/TeX_files/packages.tex
@@ -17,7 +17,7 @@
 \usepackage{xcolor}
 
 %package for making appendicies.
-\usepackage{appendix}
+\usepackage[titletoc]{appendix}
 
 % Allows the use of fancy headers
 \usepackage{fancyhdr}
