--- a/docs/Manual.tex
+++ b/docs/Manual.tex
@@ -40,6 +40,8 @@
 
 \include{./TeX_files/chapter/installation}
 
+\include{./TeX_files/chapter/design}
+
 \include{./TeX_files/chapter/tools_and_scripts}
 
 \backmatter
