--- a/docs/Manual.tex
+++ b/docs/Manual.tex
@@ -13,6 +13,7 @@
 %END_FOLD
 
 \begin{document}
+\lstset{style=mystyle}
 
 \frontmatter
 \maketitle
@@ -36,9 +37,9 @@
 
 \include{./TeX_files/chapter/tools_and_scripts}
 
-\backmatter
-\include{./TeX_files/AppendixI}
-\include{./TeX_files/references}
+%\backmatter
+%\include{./TeX_files/AppendixI}
+%\include{./TeX_files/references}
 \printindex
 
 \end{document}
