Added some automated github docs

--- a/docs/Manual.tex
+++ b/docs/Manual.tex
@@ -37,6 +37,8 @@
 
 \include{./TeX_files/chapter/tools_and_scripts}
 
+\include{./TeX_files/chapter/github}
+
 %\backmatter
 %\include{./TeX_files/AppendixI}
 %\include{./TeX_files/references}
